--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -24,6 +24,9 @@
 		</div>
 		<div class="menu-item-indicator-container">		
 			<div class="menu-item-indicator-container-inner clearfix">
+				<div class="menu-item-indicator item-intro-indicator" role="button" aria-label="">
+					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{_coverMenu._introItemGraphic.src}}"/></a>
+				</div>
 				{{!-- Indicators rendered here --}}
 			</div>
 		</div>
