--- a/templates/cover-item.hbs
+++ b/templates/cover-item.hbs
@@ -1,4 +1,7 @@
 <div class="menu-item-inner" role="menuitem">
+	<div class="menu-item-audio-inner">
+		<button href="#" class="menu-item-audio-toggle fa-play play-pause-icon" id="{{_id}}" role="button"></button>
+	</div>
 	<div class="menu-item-title" role="heading">
 		<h2 class="menu-item-title-inner">{{{a11y_text title}}}</h2>
 	</div>
