--- a/less/cover.less
+++ b/less/cover.less
@@ -61,8 +61,8 @@
 	    border:@button-border;
 	    .no-touch & {
 	        &:hover {
-	            background-color:@button-hover-color;
-	            color:@button-text-hover-color;
+	            background-color:@button-color-hover;
+	            color:@button-text-color-hover;
 	        } 
 	    }
 		&.menu-item-control-left {
@@ -77,6 +77,7 @@
 		@media all and (max-width:@device-width-small) {
 			display: none;
 		}
+		.transition-all-colors;
 	}
 
 
@@ -114,11 +115,12 @@
 	}
 
 	.menu-item-audio-toggle {
-        color: @white;
+        color: @item-text-color;
         background-color: @item-color;
         padding: @item-padding;
         .transition-all-colors;
         &:hover{
+        	color: @item-text-color-hover;
             background-color: @item-color-hover;
         }
 	}
@@ -128,7 +130,10 @@
     }
 
 	.menu-item-title {
-		margin-top: 20px;
+		margin-top: @menu-header-padding-top;
+		font-size: @menu-title-font-size;
+		font-weight: @menu-title-font-weight;
+		line-height: @menu-title-line-height;
 	}
 
 	.menu-item-title-inner {
