Audio changes to be inline with main audio extension

--- a/less/cover.less
+++ b/less/cover.less
@@ -109,12 +109,12 @@
 		}
 	}
 
-	.menu-item-audio-inner {
+	.audio-inner {
 		display:inline;
     	float: right;
 	}
 
-	.menu-item-audio-toggle {
+	.audio-toggle {
         color: @item-text-color;
         background-color: @item-color;
         padding: @item-padding;
