--- a/templates/cover-item-audio.hbs
+++ b/templates/cover-item-audio.hbs
@@ -1,3 +1,3 @@
-<div class="menu-item-audio-inner">
-	<button class="menu-item-audio-toggle fa-play play-pause-icon" id="{{_id}}" role="button"></button>
+<div class="audio-inner">
+	<button class="audio-toggle fa-play play-pause-icon" id="{{_id}}" role="button"></button>
 </div>
