--- a/templates/cover-item.hbs
+++ b/templates/cover-item.hbs
@@ -6,7 +6,7 @@
 		<div class="menu-item-body-inner">{{{a11y_text body}}}</div>
 	</div>
 	<div class="menu-item-duration">
-		<div class="menu-item-duration-inner">{{{a11y_text duration}}}</div>
+		<div class="menu-item-duration-inner">{{{a11y_text durationLabel}}} {{{a11y_text duration}}}</div>
 	</div>
 	{{#unless _isLocked}}
 	<a class="menu-item-route button" href="#/id/{{_id}}" class="{{#if _isVisited}}visited{{/if}}" aria-label="{{_coverMenu_ariaLabels.menuViewButton}}">
@@ -18,6 +18,7 @@
 	</a>
 	{{/unless}}
 	{{#if _assessment}}
+	<!--
 	<div class="menu-item-assement-details">
 		<div class="menu-item-assement-details-inner">
 			<div><b>Assessment summary</b><br><br></div>
@@ -28,6 +29,7 @@
 			<div><b>Passed status:</b> {{#if _assessment.isPassed}}Passed{{else}}Not passed{{/if}} </div>
 		</div>
 	</div>
+	-->
 	{{/if}}
 	<div class="menu-item-spacer"></div>
 </div>
