Updated accessibility features

--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -1,4 +1,4 @@
-<div class="menu-container" role="region">
+<div class="menu-container" role="region" aria-label="{{_globals._menu._covermenu.ariaRegion}}">
 	<div class="menu-intro-screen">
 		<div class="menu-intro-screen-inner">
 			{{#if title}}
