Themechanges for default build

--- a/less/cover.less
+++ b/less/cover.less
@@ -103,9 +103,28 @@
 	.menu-item-inner {
 		text-align: center;
 		margin: auto;
-		@media all and (max-width:@device-width-large) {
-			padding: 10px;
+		padding: 10px;
+		background-color: rgba(0,0,0,0.7) !important;
+	    .no-opacity & {
+	        background-image:@transparency-fallback-png !important;
+	    }
+		@media all and (max-width: @device-width-small) {
+			margin: auto;
+        }
+        //  Only show for desktop and tablet
+    	@media all and (min-width: @device-width-medium) {
+	  		position: relative;
+	  		top: 50%;
+	  		left: 50%;
+	  		transform: translate(-50%, -70%);
+	  		-ms-transform: translate(-50%, -70%);
+	  		-webkit-transform: translate(-50%, -70%);
+	  		-moz-transform: translate(-50%, -70%);
+	  		-o-transform: translate(-50%, -70%);
 		}
+		@media all and (max-width: @device-width-medium) {
+			margin-top: 50px;
+        }
 	}
 
 	.audio-inner {
@@ -129,31 +148,41 @@
     }
 
 	.menu-item-title {
-		margin-top: @menu-header-padding-top;
 		font-size: @menu-title-font-size;
 		font-weight: @menu-title-font-weight;
 		line-height: @menu-title-line-height;
+
+		@media all and (min-width:@device-width-medium) {
+			width: 70%;
+			margin: 0 auto;
+		}
 	}
 
 	.menu-item-title-inner {
 		color:@menu-secondary-font-color;
+		padding: 10px 0px 10px 0px;
+		background-color: @title-background-color;
 	}
 
 	.menu-item-body-inner {
 		color:@menu-secondary-font-color;
-		margin: 20px 0;
+		margin: 20px 10px;
 	}
 
 	.menu-item-assement-details {
 		color:@menu-secondary-font-color;
+		border: 1px solid white;
+		margin-top: 20px;
+	}
+
+	.menu-item-assement-details-inner {
+		padding: 20px;
 	}
 
 	.menu-item-duration {
 		display: block;
 		color:@menu-secondary-font-color;
 	}
-
-
 
 	// Menu Item Indicator Container
 	// =============================
@@ -235,7 +264,7 @@
 	}
 
 	.menu-item-spacer {
-		height:130px;
+		height:10px;
 	}
 
 	// Letterbox sized viewports
@@ -275,7 +304,3 @@
 	}
 
 }
-
-
-
-
