Improved audio toggle show/hide

--- a/less/cover.less
+++ b/less/cover.less
@@ -141,6 +141,9 @@
         	color: @item-text-color-hover;
             background-color: @item-color-hover;
         }
+        &.hidden {
+	        display: none;
+	    }
 	}
 
 	.hidden {
