--- a/less/cover-variables.less
+++ b/less/cover-variables.less
@@ -1,5 +1,5 @@
 @menu-primary-font-color:#fff;
-@menu-secondary-font-color:#fff;;
+@menu-secondary-font-color:#fff;
 
 @menu-control-size:50px;
 @menu-control-icon-color:white;
