--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -1,4 +1,4 @@
-<div class="menu-container" role="region" aria-label="{{_globals._menu._covermenu.ariaRegion}}">
+<div class="menu-container" role="region" aria-label="{{_globals._menu._introcoveraudio.ariaRegion}}">
 	<div class="menu-intro-screen">
 		<div class="menu-intro-screen-inner">
 			{{#if title}}
@@ -22,10 +22,10 @@
 		<div class="menu-item-container-inner clearfix">
 		{{!-- Items rendered here --}}
 		</div>
-		<div class="menu-item-indicator-container">		
+		<div class="menu-item-indicator-container">
 			<div class="menu-item-indicator-container-inner clearfix">
 				<div class="menu-item-indicator item-intro-indicator" role="button" aria-label="">
-					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{_coverMenu._introItemGraphic.src}}"/></a>
+					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{_coverMenuAudio._introItemGraphic.src}}"/></a>
 				</div>
 				{{!-- Indicators rendered here --}}
 			</div>
