Missing menuSettings element

--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -25,7 +25,7 @@
 		<div class="menu-item-indicator-container">
 			<div class="menu-item-indicator-container-inner clearfix">
 				<div class="menu-item-indicator item-intro-indicator" role="button" aria-label="">
-					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{_coverMenuAudio._introItemGraphic.src}}"/></a>
+					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{menuSettings._coverMenuAudio._introItemGraphic.src}}"/></a>
 				</div>
 				{{!-- Indicators rendered here --}}
 			</div>
