--- a/templates/cover-item.hbs
+++ b/templates/cover-item.hbs
@@ -6,14 +6,14 @@
 		<div class="menu-item-body-inner">{{{a11y_text body}}}</div>
 	</div>
 	<div class="menu-item-duration">
-		<div class="menu-item-duration-inner">{{{a11y_text menuSettings._coverMenuAudio.durationLabel}}} {{{a11y_text duration}}}</div>
+		<div class="menu-item-duration-inner">{{{a11y_text _coverMenuAudio.durationLabel}}} {{{a11y_text duration}}}</div>
 	</div>
 	<button aria-label="{{linkText}} {{#if _isVisited}}{{_globals._accessibility._ariaLabels.visited}}{{/if}}" class="menu-item-route {{#if _isVisited}}visited{{/if}} {{#if _isLocked}}disabled{{/if}} accessible-text-block">
     {{#if _isLocked}}
-    {{{menuSettings._coverMenuAudio.linkLockedText}}}
+    {{{_coverMenuAudio.linkLockedText}}}
         {{else}}
 		{{#if _isVisited}}
-		    {{{menuSettings._coverMenuAudio.linkVisitedText}}}
+		    {{{_coverMenuAudio.linkVisitedText}}}
 		    {{else}}
 		    {{{linkText}}}
 		{{/if}}
