--- a/templates/cover-item.hbs
+++ b/templates/cover-item.hbs
@@ -10,16 +10,16 @@
 	<div class="menu-item-duration">
 		<div class="menu-item-duration-inner">{{{compile_a11y_text _coverMenuAudio.durationLabel this}}} {{{compile_a11y_text duration this}}}</div>
 	</div>
-	<button aria-label="{{linkText}} {{#if _isVisited}}{{_globals._accessibility._ariaLabels.visited}}{{/if}}" class="menu-item-route {{#if _isVisited}}visited{{/if}} {{#if _isLocked}}disabled{{/if}} accessible-text-block">
-    {{#if _isLocked}}
-    {{{_coverMenuAudio.linkLockedText}}}
-        {{else}}
+	<button aria-label="{{#if _isVisited}}{{_coverMenuAudio._ariaLabels.menuVisitedText}}{{else}}{{#if _isLocked}}{{_coverMenuAudio._ariaLabels.menuLockedText}}{{else}}{{linkText}}{{/if}}{{/if}}" class="menu-item-route {{#if _isVisited}}visited{{/if}} {{#if _isLocked}}disabled{{/if}} accessible-text-block">
+  {{#if _isLocked}}
+  {{{_coverMenuAudio.linkLockedText}}}
+    {{else}}
 		{{#if _isVisited}}
-		    {{{_coverMenuAudio.linkVisitedText}}}
-		    {{else}}
-		    {{{linkText}}}
+		{{{_coverMenuAudio.linkVisitedText}}}
+		{{else}}
+		{{{linkText}}}
 		{{/if}}
 	{{/if}}
-    </button>
+  </button>
 	<div class="menu-item-spacer"></div>
 </div>
