--- a/templates/cover-item-indicator.hbs
+++ b/templates/cover-item-indicator.hbs
@@ -1,5 +1,5 @@
 <div class="menu-item-indicator-inner" role="menuitem">
-	<a href="#" class="menu-item-indicator-graphic" aria-label="{{_coverMenu_ariaLabels.menuItemPage}}">
+	<button class="base menu-item-indicator-graphic" aria-label="{{_coverMenuAudio._ariaLabels.menuItemPage}}">
 		{{#if _isComplete}}
 			{{#if _assessment}}
 				{{#if _assessment.isPassed}}
@@ -21,5 +21,5 @@
 				{{/if}}
 			{{/if}}
 		{{/if}}
-	</a>
+	</button>
 </div>
