--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -1,6 +1,6 @@
 {{! make the _globals object in course.json available to this template}}
 {{import_globals}}
-<div class="menu-container" role="region" aria-label="{{_globals._menu._introcoveraudio.ariaRegion}}">
+<div class="menu-container" role="region" aria-label="{{_globals._menu._coverMenuAudio.ariaRegion}}">
 	<div class="menu-intro-screen">
 		<div class="menu-intro-screen-inner">
 			{{#if title}}
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 			{{/if}}
-			<a href="#" class="menu-reveal-items button" role="button">Start</a>
+			<button class="menu-reveal-items button">Start</button>
 		</div>
 	</div>
 	<div class="menu-item-container" role="menu">
@@ -27,14 +27,14 @@
 		<div class="menu-item-indicator-container">
 			<div class="menu-item-indicator-container-inner clearfix">
 				{{#if _coverMenuAudio._introItemGraphic.src}}
-				<div class="menu-item-indicator item-intro-indicator" role="button" aria-label="">
+				<div class="menu-item-indicator item-intro-indicator" aria-label="">
 					<a href="#" class="menu-item-indicator-graphic menu-item-intro"><img src="{{_coverMenuAudio._introItemGraphic.src}}"/></a>
 				</div>
 				{{/if}}
 				{{!-- Indicators rendered here --}}
 			</div>
 		</div>
-		<a href="#" class="menu-item-control menu-item-control-left icon-controls-left icon" role="button" aria-label="{{_accessibility._ariaLabels.previous}}"></a>
-		<a href="#" class="menu-item-control menu-item-control-right icon-controls-right icon" role="button" aria-label="{{_accessibility._ariaLabels.next}}"></a>
+		<button class="base menu-item-control menu-item-control-left icon-controls-left icon" aria-label="{{_globals._accessibility._ariaLabels.previous}}"></button>
+		<button class="base menu-item-control menu-item-control-right icon-controls-right icon" aria-label="{{_globals._accessibility._ariaLabels.next}}"></button>
 	</div>
 </div>
