Apply framework v4 updates

--- a/templates/cover-item.hbs
+++ b/templates/cover-item.hbs
@@ -2,13 +2,13 @@
 {{import_globals}}
 <div class="menu-item-inner" role="menuitem">
 	<div class="menu-item-title" role="heading">
-		<div class="menu-item-title-inner">{{{compile_a11y_text title this}}}</div>
+		<div class="menu-item-title-inner">{{{compile title this}}}</div>
 	</div>
 	<div class="menu-item-body">
-		<div class="menu-item-body-inner">{{{compile_a11y_text body this}}}</div>
+		<div class="menu-item-body-inner">{{{compile body this}}}</div>
 	</div>
 	<div class="menu-item-duration">
-		<div class="menu-item-duration-inner">{{{compile_a11y_text _coverMenuAudio.durationLabel this}}} {{{compile_a11y_text duration this}}}</div>
+		<div class="menu-item-duration-inner">{{{compile _coverMenuAudio.durationLabel this}}} {{{compile duration this}}}</div>
 	</div>
 	<button aria-label="{{#if _isVisited}}{{_coverMenuAudio._ariaLabels.menuVisitedText}}{{else}}{{#if _isLocked}}{{_coverMenuAudio._ariaLabels.menuLockedText}}{{else}}{{linkText}}{{/if}}{{/if}}" class="menu-item-route {{#if _isVisited}}visited{{/if}} {{#if _isLocked}}disabled{{/if}} accessible-text-block">
   {{#if _isLocked}}
