--- a/templates/cover-item-audio.hbs
+++ b/templates/cover-item-audio.hbs
@@ -1,3 +1,3 @@
 <div class="audio-inner">
-	<button class="audio-toggle fa-volume-up play-pause-icon" id="{{_id}}" role="button"></button>
+	<button class="audio-toggle fa-volume-up play-pause-icon" id="{{_id}}"></button>
 </div>
