--- a/less/cover.less
+++ b/less/cover.less
@@ -27,7 +27,7 @@
 	}
 
 	.menu-title-inner {
-		color: @menu-primary-font-color;
+		color: #fff;
 	}
 
 	.menu-body {
@@ -35,7 +35,7 @@
 	}
 
 	.menu-body-inner {
-		color: @menu-primary-font-color;
+		color: #fff;
 	}
 
 	.menu-item-container {
@@ -174,18 +174,18 @@
 	}
 
 	.menu-item-title-inner {
-		color: @menu-secondary-font-color;
-		padding: 10px 0px 10px 0px;
-		background-color: @title-background-color;
+		color: @primary-color-inverted;
+		background-color: @primary-color;
+		padding: @item-padding;
 	}
 
 	.menu-item-body-inner {
-		color: @menu-secondary-font-color;
+		color: #fff;
 		margin: 20px 10px;
 	}
 
 	.menu-item-assement-details {
-		color: @menu-secondary-font-color;
+		color: #fff;
 		border: 1px solid white;
 		margin-top: 20px;
 	}
@@ -196,7 +196,7 @@
 
 	.menu-item-duration {
 		display: block;
-		color: @menu-secondary-font-color;
+		color: #fff;
 		padding-bottom: 20px;
 	}
 
@@ -225,7 +225,7 @@
 
 	// PLP
 	.page-level-progress-menu-item-indicator {
-	  border: 2px solid @menu-secondary-font-color;
+	  border: 2px solid #fff;
 	}
 
 	// Menu Item Indicator
@@ -262,10 +262,10 @@
 		}
 		img {
 			display: block;
-			max-height: @menu-idicator-max-height;
+			max-height: 80px;
 
 			@media all and (max-width:@device-width-small) {
-				max-height: @menu-idicator-max-height-mobile;
+				max-height: 50px;
 			}
 		}
 	}
