--- a/less/cover.less
+++ b/less/cover.less
@@ -10,15 +10,41 @@
 		left: 0;
 		z-index: 290;
 		background-color: @secondary-color;
-		display:table;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: top center;
+		display: block;
 	}
 
 	.menu-intro-screen-inner {
+		color: @primary-color-inverted;
+		background-color: @primary-color;
 		text-align: center;
 		max-width: 900px;
 		margin: auto;
 		@media all and (max-width: @device-width-large) {
 			padding: 10px;
+		}
+
+		.menu-title {
+			padding-top: 20px;
+		}
+
+		.menu-body,
+		.menu-instruction,
+		.menu-reveal-items {
+			margin-bottom: 20px;
+		}
+
+		//  Only show for desktop and tablet
+  	@media all and (min-width: @device-width-medium) {
+	  		position: relative;
+	  		top: 50%;
+	  		transform: translateY(-70%);
+	  		-ms-transform: translateY(-70%);
+	  		-webkit-transform: translateY(-70%);
+	  		-moz-transform: translateY(-70%);
+	  		-o-transform: translateY(-70%);
 		}
 	}
 
@@ -36,6 +62,11 @@
 
 	.menu-body-inner {
 		color: #fff;
+	}
+
+	.menu-instruction {
+		.instruction-text;
+		margin-bottom: 20px;
 	}
 
 	.menu-item-container {
@@ -137,10 +168,14 @@
 	}
 
 	.audio-inner {
-		display: inline;
-    float: right;
+		position: absolute;
+		top: 0;
+		right: 0;
+		z-index: 291;
+
 		.dir-rtl & {
-			float: left;
+			right: inherit;
+			left: 0;
 		}
 	}
 
