--- a/less/cover.less
+++ b/less/cover.less
@@ -214,9 +214,14 @@
 		padding: @item-padding;
 	}
 
-	.menu-item-body-inner {
+	.menu-item-body-inner,
+	.menu-item-instruction-inner {
 		color: #fff;
 		margin: 20px 10px;
+	}
+
+	.menu-item-instruction {
+		.instruction-text;
 	}
 
 	.menu-item-assement-details {
@@ -232,7 +237,7 @@
 	.menu-item-duration {
 		display: block;
 		color: #fff;
-		padding-bottom: 20px;
+		margin: 20px 10px;
 	}
 
 	// Menu Item Indicator Container
