--- a/templates/cover.hbs
+++ b/templates/cover.hbs
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 			{{/if}}
-			{{#if body}}
+			{{#if instruction}}
 			<div class="menu-instruction">
 				<div class="menu-instruction-inner">
 					{{{compile instruction this}}}
