--- a/less/cover-variables.less
+++ b/less/cover-variables.less
@@ -7,4 +7,4 @@
 @menu-idicator-max-height:80px;
 @menu-idicator-max-height-mobile:50px;
 
-@title-background-color:@background-color;
+//@title-background-color:@menu-item;
