--- a/less/cover.less
+++ b/less/cover.less
@@ -9,7 +9,7 @@
 		top: 0;
 		left: 0;
 		z-index: 290;
-		background-color: @secondary-color;
+		background-color: @item-color;
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: top center;
@@ -17,8 +17,8 @@
 	}
 
 	.menu-intro-screen-inner {
-		color: @primary-color-inverted;
-		background-color: @primary-color;
+		color: @menu-item-inverted;
+		background-color: @menu-item;
 		text-align: center;
 		max-width: 900px;
 		margin: auto;
@@ -87,13 +87,13 @@
 		text-align: center !important;
 		font-size: 24px;
 		margin-top: -40px;
-		background-color: @button-color;
-	  color: @button-text-color;
-	  border: @button-border;
+		background-color: @interactive-color;
+	  color: @interactive-text-color;
+	  border: @interactive-color;
 	  .no-touch & {
 	      &:hover {
-	          background-color: @button-color-hover;
-	          color: @button-text-color-hover;
+	          background-color: @interactive-color-hover;
+	          color: @interactive-text-color-hover;
 	      }
 	  }
 		&.menu-item-control-left {
@@ -116,7 +116,6 @@
 		@media all and (max-width: @device-width-small) {
 			display: none;
 		}
-		.transition-all-colors;
 	}
 
 	// Menu Item
@@ -145,9 +144,7 @@
 		margin: auto;
 		padding: 10px;
 		background-color: rgba(0,0,0,0.7) !important;
-	  .no-opacity & {
-	      background-image: @transparency-fallback-png !important;
-	  }
+
 		@media all and (max-width: @device-width-small) {
 			margin: auto;
     }
@@ -180,12 +177,11 @@
 	}
 
 	.audio-toggle {
-      color: @item-text-color;
+      color: @item-color-inverted;
       background-color: @item-color;
       padding: @item-padding;
-      .transition-all-colors;
       &:hover{
-        color: @item-text-color-hover;
+        color: @item-color-inverted-hover;
           background-color: @item-color-hover;
       }
       &.hidden {
@@ -198,8 +194,8 @@
   }
 
 	.menu-item-title {
-		font-size: @menu-title-font-size;
-		font-weight: @menu-title-font-weight;
+		font-size: @menu-title-size;
+		font-weight: @menu-title-weight;
 		line-height: @menu-title-line-height;
 
 		@media all and (min-width: @device-width-medium) {
@@ -209,8 +205,8 @@
 	}
 
 	.menu-item-title-inner {
-		color: @primary-color-inverted;
-		background-color: @primary-color;
+		color: @menu-item-inverted;
+		background-color: @menu-item;
 		padding: @item-padding;
 	}
 
