--- a/templates/cover-item-indicator.hbs
+++ b/templates/cover-item-indicator.hbs
@@ -1,5 +1,5 @@
-<div class="menu-item-indicator-inner" role="menuitem">
-	<button class="base menu-item-indicator-graphic" aria-label="{{_coverMenuAudio._ariaLabels.menuItemPage}}">
+<div class="covermenu-item__indicator-inner" role="menuitem">
+	<button class="covermenu-item__indicator-graphic" aria-label="{{_coverMenuAudio._ariaLabels.menuItemPage}}">
 		{{#if _isComplete}}
 			{{#if _assessment}}
 				{{#if _assessment.isPassed}}
