--- a/templates/cover-item-audio.hbs
+++ b/templates/cover-item-audio.hbs
@@ -1,3 +1,5 @@
-<div class="audio-inner">
-	<button class="audio-toggle fa-volume-up play-pause-icon" id="{{_id}}"></button>
+<div class="audio__inner">
+	<button class="btn-icon audio__controls js-audio-toggle" id="{{_id}}" aria-label="">
+		<div class="audio__controls-icon"></div>
+	</button>
 </div>
