Various fixes after testing

--- a/less/coverMenuItem.less
+++ b/less/coverMenuItem.less
@@ -155,7 +155,7 @@
 		.dir-rtl & {
 			float: right;
 		}
-		&.selected {
+		&.is-selected {
 			.covermenu-item__indicator-graphic {
 				opacity: 1;
 			}
