--- a/templates/cover-item-indicator.hbs
+++ b/templates/cover-item-indicator.hbs
@@ -1,3 +1,4 @@
+{{#any _coverMenuAudio._indicatorGraphic._default _coverMenuAudio._indicatorGraphic._isPassed _coverMenuAudio._indicatorGraphic._isFailed _coverMenuAudio._indicatorGraphic._isVisited _coverMenuAudio._indicatorGraphic._isLocked}}
 <div class="covermenu-item__indicator-inner" role="menuitem">
 	<button class="covermenu-item__indicator-graphic" aria-label="{{_coverMenuAudio._ariaLabels.menuItemPage}}">
 		{{#if _isComplete}}
@@ -23,3 +24,4 @@
 		{{/if}}
 	</button>
 </div>
+{{/any}}
